--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mithril Starter Kit</title>
+  <link rel="stylesheet" type="text/css" href="/assets/css/app.css">
   <!--[if lt IE 9]>
     <script src="/assets/vendors/polyfill/es5-shim.js"></script>
   <![endif]-->
