--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="pragma" content="no-cache" />
+  <meta http-equiv="Cache-Control" content="no-cache, must-revalidate" />
+  <meta http-equiv="expires" content="Thu, 01 Jan 1970 00:00:01 GMT" />
   <title>Mithril Starter Kit</title>
   <link rel="stylesheet" type="text/css" href="/assets/css/app.css">
   <!--[if lt IE 9]>
